--- a/my-webpages.html
+++ b/my-webpages.html
@@ -20,19 +20,21 @@
                 </span>
             </div>
             <!--WHICH CITY-->
+            <div class="City1">
             <h2>Which City</h2>
             <div class="City">
                 <span>
-                <img class="CityImg" src="https://res.klook.com/images/fl_lossy.progressive,q_65/c_fill,w_1200,h_630/w_80,x_15,y_15,g_south_west,l_Klook_water_br_trans_yhcmh3/activities/wmw7pawvopezbldjcy3i/New%20York%20Boroughs:%20Brooklyn,%20the%20Bronx,%20Harlem,%20Coney%20Island%20&%20Queens%20Day%20Tour.jpg">
+                <img class="CityImg" src="New York Boroughs_ Brooklyn, the Bronx, Harlem, Coney Island & Queens Day Tour.jpg">
                 </span>
-                <span>
+                <span class="spanCity">
                 <h4>
                     New York City because I heard that it is beautiful and people say that you have not made it in life until you have been to New York City
                 </h4>
                 </span>
             </div>
+        </div>
             <!--Language-->
-            <div>
+            <div class="ForeignL1">
                 <h2>Foreign Language</h2>
                 <div class="ForeignL">
                 <h3>French</h3>
@@ -64,15 +66,15 @@
                 <h2>Favourite subjects</h2>
                 <div class="Fav">
                     <ol id="subjectlist">
-                    <li>FULL STACK WEB DEVELOPMENT</li>
-                    <li>4IR TECHNOLOGIES BOOTCAMP</li>
-                    <li>ENGINEERING BUSINESS SYSTEMS</li>
+                    <li class="subjectlist1"> <img class="Imgcol-4"   src="wp10167060.webp"> FULL STACK WEB DEVELOPMENT</li>
+                    <li class="subjectlist1"> <img class="Imgcol-4"   src="HR-GR8-technology.jpg"> 4IR TECHNOLOGIES BOOTCAMP</li>
+                    <li class="subjectlist1"> <img class="Imgcol-4"   src="System-Teamwork-Gears.jpg"> ENGINEERING BUSINESS SYSTEMS</li>
                     </ol>
                 </div>
                 <!--Historic places in your city-->
                 <h2>Historic places in your city</h2>
                 <div class="Hist">
-                    <div>
+                    <div class="sizeHiv">
                     <h3>Mandela House, Johannesburg</h3>
                     <div class="Places">
                         <p>Once a family residence of South Africa's legendary president, Mandela House features some interactive exhibits and personal objects. Although small, the house provides an important glimpse into Mandela's private life</p>
@@ -80,7 +82,7 @@
                     </div>
                     </div>
 
-                   <div>
+                   <div class="sizeHiv">
                     <h3>Johannesburg City Hall</h3>
                     <div class="Places">
                        <p>Constructed in 1914 and situated on Rissik Street, smack bang in the middle of Joburg CBD is the Johannesburg City Hall. This is one of the oldest buildings in the city and it has seen many historical events take place on its steps, from a range of protest marches and political rallies to a bomb blast in the late 80s. It’s rather strange to think that this building has been around since the days of ox-wagons! If you find yourself in downtown Jozi, be sure to admire its Edwardian architecture and solid sandstone walls.</p>
@@ -88,7 +90,7 @@
                     </div>
                    </div>
 
-                    <div>
+                    <div class="sizeHiv">
                     <h3>Hector Pieterson Memorial and Museum</h3>
                     <div class="Places">
                         <p>In tribute to and memory of Hector Pieterson and those who gave their lives in the struggle for freedom during the 1976 Student Uprising in Soweto, this museum is a symbol of the youth's resistance to Apartheid. The museum houses disturbing evidence in the form of verbal testimonials, pictures, audiovisual displays as well as documents that are related to the events of that day. The sights and sounds and atmosphere will, in fact, have you feeling as though you are right in the middle of the uprising and bloody aftermath.</p>
